HIP-1137 Persist new registered node transactions (#13011)
* Added registered_node and registered_node_history tables.
* Added 3 new transaction handlers to registered_node create, update and delete 

---------

Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>
Signed-off-by: Xin Li <xin@hashgraph.com>
Co-authored-by: Xin Li <xin@hashgraph.com>